[package]
name = "reproduce_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "3.0.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["json"] }